src/lib/snapshots/hemlis_lib__parser__tests__typ_row_kind_ambiguity_typ.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"A :: Type\")"
---
10 of 10
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Kinded
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 5)->(2, 6)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 10)->(2, 14)
===
