src/lib/snapshots/hemlis_lib__parser__tests__typ_var_bindings_a.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"a\")"
---
8 of 8
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Var
    Name
     (2, 5)->(2, 6)
===
